mp4/student.output
   0  $accept : %entry% $end

   1  main : expression DSEMI
   2       | LET IDENT EQUALS expression DSEMI
   3       | LET REC IDENT IDENT EQUALS expression DSEMI

   4  constant_expression : INT
   5                      | TRUE
   6                      | FALSE
   7                      | FLOAT
   8                      | NIL
   9                      | STRING
  10                      | UNIT

  11  monop : HEAD
  12        | TAIL
  13        | PRINT
  14        | NEG
  15        | FST
  16        | SND

  17  plus_minus : PLUS
  18             | MINUS
  19             | DPLUS
  20             | DMINUS
  21             | CARAT

  22  times_div : TIMES
  23            | DIV
  24            | MOD
  25            | DTIMES
  26            | DDIV

  27  expression : op_exp

  28  op_exp : pure_or_exp LOGICALOR and_exp
  29         | and_exp

  30  and_exp : pure_and_exp LOGICALAND rel_exp
  31          | rel_exp

  32  rel_exp : pure_rel_exp GT cons_exp
  33          | pure_rel_exp EQUALS cons_exp
  34          | pure_rel_exp LT cons_exp
  35          | pure_rel_exp LEQ cons_exp
  36          | pure_rel_exp GEQ cons_exp
  37          | pure_rel_exp NEQ cons_exp
  38          | cons_exp

  39  cons_exp : pure_add_exp DCOLON cons_exp
  40           | add_exp

  41  add_exp : pure_add_exp plus_minus mult_exp
  42          | mult_exp

  43  mult_exp : pure_mult_exp times_div expo_exp
  44           | expo_exp

  45  expo_exp : pure_app_raise_exp EXP expo_exp
  46           | nonop_exp

  47  nonop_exp : if_let_fun_try_monop_exp
  48            | app_raise_exp

  49  app_raise_exp : app_exp
  50                | monop_raise
  51                | pure_app_exp monop_raise

  52  monop_raise : monop RAISE nonop_exp
  53              | RAISE nonop_exp

  54  app_exp : atomic_expression
  55          | pure_app_exp nonapp_exp

  56  nonapp_exp : atomic_expression
  57             | if_let_fun_try_monop_exp

  58  if_let_fun_try_monop_exp : TRY expression WITH exp_matches
  59                           | LET REC IDENT IDENT EQUALS expression IN expression
  60                           | LET IDENT EQUALS expression IN expression
  61                           | FUN IDENT ARROW expression
  62                           | IF expression THEN expression ELSE expression
  63                           | monop if_let_fun_try_monop_exp

  64  exp_matches : exp_match
  65              | no_try_exp_match PIPE exp_matches

  66  exp_match : pat ARROW expression

  67  pat : UNDERSCORE
  68      | INT

  69  pure_or_exp : pure_or_exp LOGICALOR pure_and_exp
  70              | pure_and_exp

  71  pure_and_exp : pure_and_exp LOGICALAND pure_eq_exp
  72               | pure_eq_exp

  73  pure_eq_exp : pure_rel_exp

  74  pure_rel_exp : pure_rel_exp GT pure_cons_exp
  75               | pure_rel_exp EQUALS pure_cons_exp
  76               | pure_rel_exp LT pure_cons_exp
  77               | pure_rel_exp GEQ pure_cons_exp
  78               | pure_rel_exp LEQ pure_cons_exp
  79               | pure_rel_exp NEQ pure_cons_exp
  80               | pure_cons_exp

  81  pure_cons_exp : pure_add_exp DCOLON pure_cons_exp
  82                | pure_add_exp

  83  pure_add_exp : pure_add_exp plus_minus pure_mult_exp
  84               | pure_mult_exp

  85  pure_mult_exp : pure_mult_exp times_div pure_expo_exp
  86                | pure_expo_exp

  87  pure_expo_exp : pure_app_raise_exp EXP pure_expo_exp
  88                | pure_app_raise_exp

  89  pure_app_raise_exp : pure_app_exp
  90                     | pure_monop_raise
  91                     | pure_app_exp pure_monop_raise

  92  pure_monop_raise : monop RAISE pure_app_raise_exp
  93                   | RAISE pure_app_raise_exp

  94  pure_app_exp : atomic_expression
  95               | pure_app_exp atomic_expression

  96  no_try_exp_match : pat ARROW no_try_expression

  97  no_try_expression : no_try_op_exp

  98  no_try_op_exp : pure_or_exp LOGICALOR no_try_and_exp
  99                | no_try_and_exp

 100  no_try_and_exp : pure_and_exp LOGICALAND no_try_eq_exp
 101                 | no_try_eq_exp

 102  no_try_eq_exp : no_try_rel_exp

 103  no_try_rel_exp : pure_rel_exp GT no_try_cons_exp
 104                 | pure_rel_exp EQUALS no_try_cons_exp
 105                 | pure_rel_exp LT no_try_cons_exp
 106                 | pure_rel_exp GEQ no_try_cons_exp
 107                 | pure_rel_exp LEQ no_try_cons_exp
 108                 | pure_rel_exp NEQ no_try_cons_exp
 109                 | no_try_cons_exp

 110  no_try_cons_exp : pure_add_exp DCOLON no_try_cons_exp
 111                  | no_try_add_exp

 112  no_try_add_exp : pure_add_exp plus_minus no_try_mult_exp
 113                 | no_try_mult_exp

 114  no_try_mult_exp : pure_mult_exp times_div no_try_expo_exp
 115                  | no_try_expo_exp

 116  no_try_expo_exp : pure_app_raise_exp EXP no_try_expo_exp
 117                  | no_try_nonop_exp

 118  no_try_nonop_exp : no_try_if_let_fun_monop_exp
 119                   | no_try_app_raise_expression

 120  no_try_app_raise_expression : no_try_app_expression
 121                              | no_try_monop_expression
 122                              | pure_app_exp no_try_monop_expression

 123  no_try_monop_expression : monop RAISE no_try_app_raise_expression
 124                          | RAISE no_try_app_raise_expression

 125  no_try_app_expression : atomic_expression
 126                        | pure_app_exp no_try_nonapp_expression

 127  no_try_nonapp_expression : atomic_expression
 128                           | no_try_if_let_fun_monop_exp

 129  no_try_if_let_fun_monop_exp : IF expression THEN expression ELSE no_try_expression
 130                              | LET IDENT EQUALS expression IN no_try_expression
 131                              | LET REC IDENT IDENT EQUALS expression IN no_try_expression
 132                              | FUN IDENT ARROW no_try_expression
 133                              | monop no_try_if_let_fun_monop_exp

 134  atomic_expression : constant_expression
 135                    | IDENT
 136                    | list_expression
 137                    | paren_expression
 138                    | monop atomic_expression

 139  list_expression : LBRAC list_contents

 140  list_exp_end : RBRAC
 141               | SEMI list_tail

 142  list_tail : RBRAC
 143            | list_contents

 144  list_contents : expression list_exp_end

 145  paren_expression : LPAREN par_exp_end

 146  par_exp_end : RPAREN
 147              | expression RPAREN
 148              | expression COMMA expression RPAREN

 149  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (149)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 11
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	TRY  shift 15
	LBRAC  shift 16
	LPAREN  shift 17
	UNIT  shift 18
	HEAD  shift 19
	TAIL  shift 20
	PRINT  shift 21
	FST  shift 22
	SND  shift 23
	.  error

	main  goto 24
	expression  goto 25
	constant_expression  goto 26
	monop  goto 27
	op_exp  goto 28
	pure_or_exp  goto 29
	and_exp  goto 30
	pure_and_exp  goto 31
	rel_exp  goto 32
	pure_rel_exp  goto 33
	cons_exp  goto 34
	pure_add_exp  goto 35
	add_exp  goto 36
	mult_exp  goto 37
	pure_mult_exp  goto 38
	expo_exp  goto 39
	pure_app_raise_exp  goto 40
	nonop_exp  goto 41
	if_let_fun_try_monop_exp  goto 42
	app_raise_exp  goto 43
	app_exp  goto 44
	monop_raise  goto 45
	pure_app_exp  goto 46
	atomic_expression  goto 47
	pure_eq_exp  goto 48
	pure_cons_exp  goto 49
	pure_expo_exp  goto 50
	pure_monop_raise  goto 51
	list_expression  goto 52
	paren_expression  goto 53


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	constant_expression : INT .  (4)

	.  reduce 4


state 4
	constant_expression : FLOAT .  (7)

	.  reduce 7


state 5
	constant_expression : STRING .  (9)

	.  reduce 9


state 6
	atomic_expression : IDENT .  (135)

	.  reduce 135


state 7
	constant_expression : TRUE .  (5)

	.  reduce 5


state 8
	constant_expression : FALSE .  (6)

	.  reduce 6


state 9
	monop : NEG .  (14)

	.  reduce 14


state 10
	constant_expression : NIL .  (8)

	.  reduce 8


state 11
	main : LET . IDENT EQUALS expression DSEMI  (2)
	main : LET . REC IDENT IDENT EQUALS expression DSEMI  (3)
	if_let_fun_try_monop_exp : LET . REC IDENT IDENT EQUALS expression IN expression  (59)
	if_let_fun_try_monop_exp : LET . IDENT EQUALS expression IN expression  (60)

	IDENT  shift 54
	REC  shift 55
	.  error


state 12
	if_let_fun_try_monop_exp : IF . expression THEN expression ELSE expression  (62)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 56
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	TRY  shift 15
	LBRAC  shift 16
	LPAREN  shift 17
	UNIT  shift 18
	HEAD  shift 19
	TAIL  shift 20
	PRINT  shift 21
	FST  shift 22
	SND  shift 23
	.  error

	expression  goto 57
	constant_expression  goto 26
	monop  goto 27
	op_exp  goto 28
	pure_or_exp  goto 29
	and_exp  goto 30
	pure_and_exp  goto 31
	rel_exp  goto 32
	pure_rel_exp  goto 33
	cons_exp  goto 34
	pure_add_exp  goto 35
	add_exp  goto 36
	mult_exp  goto 37
	pure_mult_exp  goto 38
	expo_exp  goto 39
	pure_app_raise_exp  goto 40
	nonop_exp  goto 41
	if_let_fun_try_monop_exp  goto 42
	app_raise_exp  goto 43
	app_exp  goto 44
	monop_raise  goto 45
	pure_app_exp  goto 46
	atomic_expression  goto 47
	pure_eq_exp  goto 48
	pure_cons_exp  goto 49
	pure_expo_exp  goto 50
	pure_monop_raise  goto 51
	list_expression  goto 52
	paren_expression  goto 53


state 13
	if_let_fun_try_monop_exp : FUN . IDENT ARROW expression  (61)

	IDENT  shift 58
	.  error


state 14
	monop_raise : RAISE . nonop_exp  (53)
	pure_monop_raise : RAISE . pure_app_raise_exp  (93)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 56
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	TRY  shift 15
	LBRAC  shift 16
	LPAREN  shift 17
	UNIT  shift 18
	HEAD  shift 19
	TAIL  shift 20
	PRINT  shift 21
	FST  shift 22
	SND  shift 23
	.  error

	constant_expression  goto 26
	monop  goto 27
	pure_app_raise_exp  goto 59
	nonop_exp  goto 60
	if_let_fun_try_monop_exp  goto 42
	app_raise_exp  goto 43
	app_exp  goto 44
	monop_raise  goto 45
	pure_app_exp  goto 46
	atomic_expression  goto 47
	pure_monop_raise  goto 51
	list_expression  goto 52
	paren_expression  goto 53


state 15
	if_let_fun_try_monop_exp : TRY . expression WITH exp_matches  (58)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 56
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	TRY  shift 15
	LBRAC  shift 16
	LPAREN  shift 17
	UNIT  shift 18
	HEAD  shift 19
	TAIL  shift 20
	PRINT  shift 21
	FST  shift 22
	SND  shift 23
	.  error

	expression  goto 61
	constant_expression  goto 26
	monop  goto 27
	op_exp  goto 28
	pure_or_exp  goto 29
	and_exp  goto 30
	pure_and_exp  goto 31
	rel_exp  goto 32
	pure_rel_exp  goto 33
	cons_exp  goto 34
	pure_add_exp  goto 35
	add_exp  goto 36
	mult_exp  goto 37
	pure_mult_exp  goto 38
	expo_exp  goto 39
	pure_app_raise_exp  goto 40
	nonop_exp  goto 41
	if_let_fun_try_monop_exp  goto 42
	app_raise_exp  goto 43
	app_exp  goto 44
	monop_raise  goto 45
	pure_app_exp  goto 46
	atomic_expression  goto 47
	pure_eq_exp  goto 48
	pure_cons_exp  goto 49
	pure_expo_exp  goto 50
	pure_monop_raise  goto 51
	list_expression  goto 52
	paren_expression  goto 53


state 16
	list_expression : LBRAC . list_contents  (139)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 56
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	TRY  shift 15
	LBRAC  shift 16
	LPAREN  shift 17
	UNIT  shift 18
	HEAD  shift 19
	TAIL  shift 20
	PRINT  shift 21
	FST  shift 22
	SND  shift 23
	.  error

	expression  goto 62
	constant_expression  goto 26
	monop  goto 27
	op_exp  goto 28
	pure_or_exp  goto 29
	and_exp  goto 30
	pure_and_exp  goto 31
	rel_exp  goto 32
	pure_rel_exp  goto 33
	cons_exp  goto 34
	pure_add_exp  goto 35
	add_exp  goto 36
	mult_exp  goto 37
	pure_mult_exp  goto 38
	expo_exp  goto 39
	pure_app_raise_exp  goto 40
	nonop_exp  goto 41
	if_let_fun_try_monop_exp  goto 42
	app_raise_exp  goto 43
	app_exp  goto 44
	monop_raise  goto 45
	pure_app_exp  goto 46
	atomic_expression  goto 47
	pure_eq_exp  goto 48
	pure_cons_exp  goto 49
	pure_expo_exp  goto 50
	pure_monop_raise  goto 51
	list_expression  goto 52
	paren_expression  goto 53
	list_contents  goto 63


state 17
	paren_expression : LPAREN . par_exp_end  (145)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 56
	IF  shift 12
	FUN  shift 13
	RAISE  shift 14
	TRY  shift 15
	LBRAC  shift 16
	LPAREN  shift 17
	RPAREN  shift 64
	UNIT  shift 18
	HEAD  shift 19
	TAIL  shift 20
	PRINT  shift 21
	FST  shift 22
	SND  shift 23
	.  error

	expression  goto 65
	constant_expression  goto 26
	monop  goto 27
	op_exp  goto 28
	pure_or_exp  goto 29
	and_exp  goto 30
	pure_and_exp  goto 31
	rel_exp  goto 32
	pure_rel_exp  goto 33
	cons_exp  goto 34
	pure_add_exp  goto 35
	add_exp  goto 36
	mult_exp  goto 37
	pure_mult_exp  goto 38
	expo_exp  goto 39
	pure_app_raise_exp  goto 40
	nonop_exp  goto 41
	if_let_fun_try_monop_exp  goto 42
	app_raise_exp  goto 43
	app_exp  goto 44
	monop_raise  goto 45
	pure_app_exp  goto 46
	atomic_expression  goto 47
	pure_eq_exp  goto 48
	pure_cons_exp  goto 49
	pure_expo_exp  goto 50
	pure_monop_raise  goto 51
	list_expression  goto 52
	paren_expression  goto 53
	par_exp_end  goto 66


state 18
	constant_expression : UNIT .  (10)

	.  reduce 10


state 19
	monop : HEAD .  (11)

	.  reduce 11


state 20
	monop : TAIL .  (12)

	.  reduce 12


state 21
	monop : PRINT .  (13)

	.  reduce 13


state 22
	monop : FST .  (15)

	.  reduce 15


state 23
	monop : SND .  (16)

	.  reduce 16


state 24
	%entry% : '\001' main .  (149)

	.  reduce 149


state 25
	main : expression . DSEMI  (1)

	DSEMI  shift 67
	.  error


state 26
	atomic_expression : constant_expression .  (134)

	.  reduce 134


state 27
	monop_raise : monop . RAISE nonop_exp  (52)
	if_let_fun_try_monop_exp : monop . if_let_fun_try_monop_exp  (63)
	pure_monop_raise : monop . RAISE pure_app_raise_exp  (92)
	atomic_expression : monop . atomic_expression  (138)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	TRUE  shift 7
	FALSE  shift 8
	NEG  shift 9
	NIL  shift 10
	LET  shift 56
	IF  shift 12
	FUN  shift 13
	RAISE  shift 68
	TRY  shift 15
	LBRAC  shift 16
	LPAREN  shift 17
	UNIT  shift 18
	HEAD  shift 19
	TAIL  shift 20
	PRINT  shift 21
	FST  shift 22
	SND  shift 23
	.  error

	constant_expression  goto 26
	monop  goto 69
	if_let_fun_try_monop_exp  goto 70
	atomic_expression  goto 71
	list_expression  goto 52
	paren_expression  goto 53


state 28
	expression : op_exp .  (27)

	.  reduce 27


state 29
	op_exp : pure_or_exp . LOGICALOR and_exp  (28)
	pure_or_exp : pure_or_exp . LOGICALOR pure_and_exp  (69)

	LOGICALOR  shift 72
	.  error


state 30
	op_exp : and_exp .  (29)

	.  reduce 29


state 31
	and_exp : pure_and_exp . LOGICALAND rel_exp  (30)
	pure_or_exp : pure_and_exp .  (70)
	pure_and_exp : pure_and_exp . LOGICALAND pure_eq_exp  (71)

	LOGICALAND  shift 73
	LOGICALOR  reduce 70


state 32
	and_exp : rel_exp .  (31)

	.  reduce 31


state 33
	rel_exp : pure_rel_exp . GT cons_exp  (32)
	rel_exp : pure_rel_exp . EQUALS cons_exp  (33)
	rel_exp : pure_rel_exp . LT cons_exp  (34)
	rel_exp : pure_rel_exp . LEQ cons_exp  (35)
	rel_exp : pure_rel_exp . GEQ cons_exp  (36)
	rel_exp : pure_rel_exp . NEQ cons_exp  (37)
	pure_eq_exp : pure_rel_exp .  (73)
	pure_rel_exp : pure_rel_exp . GT pure_cons_exp  (74)
	pure_rel_exp : pure_rel_exp . EQUALS pure_cons_exp  (75)
	pure_rel_exp : pure_rel_exp . LT pure_cons_exp  (76)
	pure_rel_exp : pure_rel_exp . GEQ pure_cons_exp  (77)
	pure_rel_exp : pure_rel_exp . LEQ pure_cons_exp  (78)
	pure_rel_exp : pure_rel_exp . NEQ pure_cons_exp  (79)

	LT  shift 74
	GT  shift 75
	LEQ  shift 76
	GEQ  shift 77
	EQUALS  shift 78
	NEQ  shift 79
	LOGICALAND  reduce 73
	LOGICALOR  reduce 73


state 34
	rel_exp : cons_exp .  (38)

	.  reduce 38


state 35
	cons_exp : pure_add_exp . DCOLON cons_exp  (39)
	add_exp : pure_add_exp . plus_minus mult_exp  (41)
	pure_cons_exp : pure_add_exp . DCOLON pure_cons_exp  (81)
	pure_cons_exp : pure_add_exp .  (82)
	pure_add_exp : pure_add_exp . plus_minus pure_mult_exp  (83)
